@@ -248,6 +248,7 @@ section "!Fuse Core Files (required)" SecCore
     File "COPYING.txt"
     File "fuse.exe"
     File "fuse.html"
+    File /nonfatal "manual*.png"
     File "README.txt"
     File /nonfatal "README-win32.txt"
     File "*.dll"
@@ -358,6 +359,7 @@ section "uninstall"
     Delete "$INSTDIR\COPYING.txt"
     Delete "$INSTDIR\fuse.exe"
     Delete "$INSTDIR\fuse.html"
+    Delete "$INSTDIR\manual*.png"
     Delete "$INSTDIR\README.txt"
     Delete "$INSTDIR\README-win32.txt"
     Delete "$INSTDIR\*.dll"
